<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@id/headerContainer" android:baselineAligned="false"
                android:layout_alignParentTop="true" android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headerText"
                    android:id="@+id/textView1" android:textSize="20dp"/>
        </LinearLayout>


        <LinearLayout
                android:id="@id/mainComponent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_below="@id/headerContainer" android:layout_above="@id/footerContainer">

            <ImageView
                    android:layout_width="171dp"
                    android:layout_height="170dp"
                    android:id="@+id/droid" android:layout_gravity="center" android:src="@drawable/droid"
                    android:contentDescription="@string/droidImageDesc" android:longClickable="false"
                    android:focusableInTouchMode="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcomeText"
                    android:id="@+id/textView" android:layout_gravity="center" android:padding="10dp" android:textSize="25dp"
                    android:textColor="@color/welcomeText"/>
            <Button
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/welcomeButton"
                    android:id="@+id/button" android:layout_gravity="center"
                    android:textSize="20dp" android:textStyle="bold" android:typeface="normal"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:id="@+id/message" android:layout_gravity="center" android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@id/footerContainer"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/footerText"
                    android:id="@+id/textView2" android:textSize="20dp"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

